force-app/main/default/objects/Work_Dependency__c/Work_Dependency__c.object-meta.xml
<CustomObject>
<deploymentStatus>Deployed</deploymentStatus><description>Explicit predecessor and successor links used by the Resource 360 Gantt scheduler.</description>
<enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing>
<label>Work Dependency</label><nameField><displayFormat>WD-{00000}</displayFormat><label>Work Dependency Number</label><trackHistory>false</trackHistory><type>AutoNumber</type></nameField><pluralLabel>Work Dependencies</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility>
</CustomObject>