force-app/main/default/objects/Work_Dependency__c/fields/Dependency_Type__c.field-meta.xml
<CustomField><fullName>Dependency_Type__c</fullName><label>Dependency Type</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
<value><fullName>Finish-to-Start</fullName><default>true</default><label>Finish-to-Start</label></value><value><fullName>Start-to-Start</fullName><default>false</default><label>Start-to-Start</label></value><value><fullName>Finish-to-Finish</fullName><default>false</default><label>Finish-to-Finish</label></value><value><fullName>Start-to-Finish</fullName><default>false</default><label>Start-to-Finish</label></value>
</valueSetDefinition></valueSet></CustomField>