force-app/main/default/objects/Work_Dependency__c/fields/Engagement__c.field-meta.xml
<CustomField><fullName>Engagement__c</fullName><label>Engagement</label><referenceTo>Engagement__c</referenceTo><relationshipLabel>Work Dependencies</relationshipLabel><relationshipName>Work_Dependencies</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>false</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>