force-app/main/default/objects/Work_Dependency__c/fields/External_ID__c.field-meta.xml
<CustomField><fullName>External_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>External ID</label><length>80</length><required>true</required><type>Text</type><unique>true</unique></CustomField>