force-app/main/default/objects/Work_Dependency__c/fields/Lag_Days__c.field-meta.xml
<CustomField><fullName>Lag_Days__c</fullName><defaultValue>0</defaultValue><label>Lag Days</label><precision>5</precision><scale>0</scale><type>Number</type></CustomField>