force-app/main/default/objects/Work_Dependency__c/fields/Predecessor__c.field-meta.xml
<CustomField><fullName>Predecessor__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Predecessor</label><referenceTo>Work_Unit__c</referenceTo><relationshipLabel>Outgoing Dependencies</relationshipLabel><relationshipName>Outgoing_Dependencies</relationshipName><required>true</required><type>Lookup</type></CustomField>