force-app/main/default/objects/Work_Dependency__c/fields/Successor__c.field-meta.xml
<CustomField><fullName>Successor__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Successor</label><referenceTo>Work_Unit__c</referenceTo><relationshipLabel>Incoming Dependencies</relationshipLabel><relationshipName>Incoming_Dependencies</relationshipName><required>true</required><type>Lookup</type></CustomField>