force-app/main/default/objects/Work_Dependency__c/validationRules/Dependency_Different_Tasks.validationRule-meta.xml
<ValidationRule><fullName>Dependency_Different_Tasks</fullName><active>true</active><errorConditionFormula>Predecessor__c = Successor__c</errorConditionFormula><errorMessage>A work unit cannot depend on itself.</errorMessage></ValidationRule>